<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GSAK Database for Locus</string>
    <string name="pref_path">Path settings</string>
    <string name="pref_db_title">GSAK database path</string>
    <string name="pref_db_sum">Path to database GSAK file (*.db3 file)</string>
    <string name="pref_db_pick_title">Pick database file</string>
    <string name="pref_filter">Filter settings</string>
    <string name="pref_type_screen_title">Geocache type</string>
    <string name="pref_type_screen_sum">Filter checked types</string>
    <string name="pref_nick_title">Nick on Geocaching.com</string>
    <string name="pref_nick_sum">For recognize own geocaches</string>
    <string name="pref_disable_title">Disable geocaches</string>
    <string name="pref_disable_sum">Load disable geocaches to Locus</string>
    <string name="pref_found_title">My found geocaches</string>
    <string name="pref_found_sum">Load my found geocaches to Locus</string>
    <string name="pref_own_title">My own geocaches</string>
    <string name="pref_own_sum">Load my own geocaches to Locus.</string>
    <string name="pref_own_fill"> Fill Geocaching.com nick to enable.</string>
    <string name="pref_archive_title">Archived geocaches</string>
    <string name="pref_archive_sum">Load archived geocaches to Locus</string>
    <string name="pref_logs_title">Logs count</string>
    <string name="pref_logs_sum">Count of last logs, which Locus load from GSAK database</string>
    <string name="pref_logs_error">Count of logs must be number between 0 and 99</string>
    <string name="pref_radius_title">Distance radius</string>
    <string name="pref_radius_sum">Distance radius in km for load geocaches to Locus</string>
    <string name="pref_radius_error">Radius must be number between 1 and 99</string>
    <string name="pref_limit_title">Geocache count</string>
    <string name="pref_limit_sum">Count of geocaches to load. If value equals 0, limit will not be applied (unlimited).</string>
    <string name="pref_limit_nolimit">no limit</string>
    <string name="pref_limit_error">Limit must be number between 0 (no limit) and 9999</string>
    <string name="pref_locus">Locus settings</string>
    <string name="pref_import_title">Allow import</string>
    <string name="pref_import_sum">Allow import geocaches to Locus</string>
    <string name="pref_livemap_title">Live map</string>
    <string name="pref_livemap_sum">Live loading caches to map (enable in Locus: Settings → Other → Enable periodic updates)</string>
    <string name="loading">Loading</string>
    <string name="geocaches">geocaches</string>
    <string name="loading_dots">Loading…</string>
    <string name="load_from_gsak">Load GSAK geocaches</string>
    <string name="error">Error!</string>
    <string name="install_it">Locus application not found! Please install!</string>
    <string name="update_it">Newer version of Locus required (>= 1.14.6)! Please update!</string>
    <string name="out_of_memory">Out of memory! Change filter to decrease geocache count!</string>
    <string name="no_external_storage">External storage (SD card) not found!</string>
    <string name="no_db_file">GSAK database not found! Set it!</string>
    <string name="unable_to_load_geocaches">Unable to load geocaches!</string>
    <string name="unable_to_load_detail">Unable to load geocache detail!</string>
    <string name="pref_about">About</string>
    <string name="pref_donate_title">Donate to development!</string>
    <string name="pref_donate_sum">Do you like this addon? Do you want to support next development? Click and donate some money!</string>
    <string name="support_app">Support GSAK Database for Locus</string>
    <string name="support_like_it">Do you like GSAK Database for Locus app?</string>
    <string name="support_rate">Please appreciate the developers adding a 5-stars in Google Play.</string>
    <string name="canceled">Loading canceled!</string>

    <string name="pref_type_corrected">Has Corrected coordinates</string>
    <string name="pref_type_traditional">Traditional Cache</string>
    <string name="pref_type_multi">Multi-Cache (Offset Cache)</string>
    <string name="pref_type_mystery">Mystery or Puzzle Caches</string>
    <string name="pref_type_earth">EarthCache</string>
    <string name="pref_type_letter">Letterbox Hybrid</string>
    <string name="pref_type_event">Event Cache</string>
    <string name="pref_type_mega">Mega-Event Cache</string>
    <string name="pref_type_cito">Cache In Trash Out Event</string>
    <string name="pref_type_wig">Wherigo™ Cache</string>
    <string name="pref_type_virtual">Virtual Cache</string>
    <string name="pref_type_webcam">Webcam Cache</string>
    <string name="pref_type_loc">Locationless (Reverse) Cache</string>
    <string name="pref_type_hq">Groundspeak Headquarters Cache</string>
    <string name="pref_type_gps">GPS Adventures Maze Exhibit</string>
    <string name="pref_type_10years">10 Years! Event Cache</string>
    <string name="pref_type_benchmark">Benchmark Hunting</string>
    <string name="pref_type_ape">Project A.P.E. Cache</string>
</resources>