<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:title="@string/app_name">
    <PreferenceCategory android:title="@string/pref_path">
        <Preference
            android:title="@string/pref_db_title"
            android:key="db_pick"
            android:summary="@string/pref_db_sum"
            />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_locus">
        <CheckBoxPreference
            android:title="@string/pref_import_title"
            android:defaultValue="true"
            android:summary="@string/pref_import_sum"
            android:key="import"
            />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_filter">
        <EditTextPreference
            android:defaultValue=""
            android:title="@string/pref_nick_title"
            android:key="nick"
            android:summary="@string/pref_nick_sum"
            />     
        <CheckBoxPreference
            android:title="@string/pref_disable_title"
            android:defaultValue="false"
            android:summary="@string/pref_disable_sum"
            android:key="disable"
            />
        <CheckBoxPreference
            android:title="@string/pref_found_title"
            android:defaultValue="false"
            android:summary="@string/pref_found_sum"
            android:key="found"
            />
        <CheckBoxPreference
            android:title="@string/pref_own_title"
            android:defaultValue="false"
            android:summary="@string/pref_own_sum"
            android:key="own"
            />
        <CheckBoxPreference
            android:title="@string/pref_archive_title"
            android:defaultValue="false"
            android:summary="@string/pref_archive_sum"
            android:key="archive"
            />
        <EditTextPreference
            android:defaultValue="0"
            android:title="@string/pref_limit_title"
            android:summary="@string/pref_limit_sum"
            android:key="limit"
            android:numeric="integer"
            android:maxLength="4"
            />
        <EditTextPreference
            android:defaultValue="1"
            android:title="@string/pref_radius_title"
            android:summary="@string/pref_radius_sum"
            android:key="radius"
            android:numeric="integer"
            android:maxLength="2"
            />
        <EditTextPreference
            android:defaultValue="20"
            android:title="@string/pref_logs_title"
            android:key="logs_count"
            android:summary="@string/pref_logs_sum"
            android:numeric="integer"
            android:maxLength="2"
            />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_about">
         <Preference
            android:key="donate"
            android:title="@string/pref_donate_title"
            android:summary="@string/pref_donate_sum"
            />
    </PreferenceCategory>
</PreferenceScreen>